books-store-app/android-http-route-definition.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: android-http-route
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "www.mybookstore.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: android-users-svc
          port: 80
          #weight: 5
      matches:
        - path:
            type: PathPrefix
            value: /android
